--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 
 # Created by https://www.gitignore.io/api/node
 # Edit at https://www.gitignore.io/?templates=node
-
+# enem alehu
 ### Node ###
 # Logs
 logs
